# SpartParser

./: .gitignore  LIMES_examplefile2_mtDNA-withGMYC_iTaxoTools_0_1.spart  LIMES_examplefile4_Mantella_PTPhsupport_iTaxoTools_0_1.spart  LIMES_examplefile5_Mantella_PTPML_iTaxoTools_0_1.spart  LIMES_examplefile6_Mantella_ABGD_iTaxoTools_0_1.spart  MANIFEST.in  README.md  main.py  packages.html  pyproject.toml  requirements-live.txt  requirements.txt  setup.py  skeleton.py  spart.xml
.github/actions/make-executable/: action.yml
.github/workflows/: deploy.yml  test.yml  windows.yml
examples/: XML_Spart_updated_25August2023.xml  concordance_test.xml  spart.xml  spart_simple.xml  spart_simple_conc.xml
scripts/: SpartParserGui.py  SpartParserGui.spec  XMLSpart.xsd  benchmark_utils.py  generate_spart.py  load_latlon.py  load_spart.py  parse_example.py  spartGenerator.py  validate_XMLspart.py
scripts/pack/: config.sh
src/itaxotools/__pyinstaller/: hook-itaxotools.spart_parser.gui.py
src/itaxotools/spart_parser/: __init__.py  main.py  skeleton.py
src/itaxotools/spart_parser/gui/: __init__.py  main.py  model.py  utility.py
src/itaxotools/spart_parser/gui/app/: __init__.py  model.py  resources.py  skin.py
tests/: test_examples.py  test_read.py  test_read_write.py  test_write.py  utility.py
tests/data/: concordances.xml  latlon.xml  scores.spart  scores.xml  scores_type.spart  scores_type.xml  simple.xml  spart_simple_conc.xml  tagged.xml
tests/test_read_write/: simple.spart
tests/test_write/: tagged.xml
